--- a/index.html
+++ b/index.html
@@ -1,53 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<title>Kenya National Anthem</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="assets/bootstrap-5.1.0-dist/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+  <link rel="shortcut icon" href="assets/img/Gloriahk.jpg" type="image/x-icon">  
+  <title>Gloriah Kerubo</title>
 </head>
+
 <body>
-	<h1>The National Anthem - English Version</h1>
 
-	<div>
-		<section class="stanza stanza1">
-			<h3>Stanza 1</h3>
+  <header id="header">
+    <div class="container-lg" class="container">
 
-			<p>
-				O God of all creation
-				Bless this our land and nation
-				Justice be our shield and defender
-				May we dwell in unity
-				Peace and liberty
-				Plenty be found within our borders.
-			</p>
-		</section>
+      <h1><a href="index.html">Welcome to my World - Gloriah Kerubo</a></h1>
 
-		<section class="stanza stanza2">
-			<h3>Stanza 2</h3>
 
-			<p>
-				Let one and all arise
-				With hearts both strong and true
-				Service be our earnest endeavour
-				And our homeland of Kenya
-				Heritage and splendour
-				Firm may we stand to defend.
-			</p>
-		</section>
+      <nav class="navbar">
+        <ul>
+          <li><a class="nav-link " id="active" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="about.html">About</a></li>
+          <li><a class="nav-link" href="about.html#work">Work</a></li>
+          <li><a class="nav-link" href="about.html#contact">Contact</a></li>
+        </ul>
+      </nav>
 
-		<section class="stanza stanza3">
-			<h3>Stanza 3</h3>
-
-			<p>
-				Let all with one accord
-				In common bond united
-				Build this our nation together
-				And the glory of Kenya
-				The fruit of our labour
-				Fill every heart with thanksgiving.
-			</p>
-		</section>
-
-	</div>
+    </div>
+  </header>
 
 </body>
+
 </html>
