--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
    
     <h2>About Me</h2>
     <div class="content">
-      <img id="gloriah" src="assets/img/gloriahk.jpg" alt="gee" height="200px">
+      <img id="gloriah" src="assets/img/Gloriahk.jpg" alt="gee" height="200px">
       <div class="tldr">
 
         <span class="tl"><a
